# c-game-boilerplate

./: CMakeLists.txt  Makefile  README.md  main.c
core/: core.c  core.h
